<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E3E3"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="7dp"
        app:layout_constraintCircle="@color/purple_200"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_area_chart_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

            <EditText
                android:id="@+id/nameText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="Enter Name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artImageView"
                app:layout_constraintVertical_bias="0.088" />

            <EditText
                android:id="@+id/artistText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="Enter Artist Name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameText"
                app:layout_constraintVertical_bias="0.083" />

            <EditText
                android:id="@+id/yearText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="Enter Art Year"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artistText"
                app:layout_constraintVertical_bias="0.086" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButon"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/purple_200"
                android:gravity="center"
                android:text="SAVE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yearText"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>